# Minecraft-Server-Manager

./: .dockerignore  .gitignore  README.md  docker-compose.override.yml  setup.ps1  setup.sh
bot/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
bot/src/: __init__.py  config.py  main.py
bot/src/cogs/: __init__.py  logs.py  monitoring.py  notifications.py  players.py  rcon.py  server.py
bot/src/core/: __init__.py  bot.py  docker_manager.py  log_manager.py  log_parser.py  rcon_client.py
bot/src/utils/: __init__.py  permissions.py  sanitize.py  validators.py
database/init/: 01-init.sql  02-tables.sql  03-functions.sql  04-logs.sql  05-security.sql
docs/: README.md  configuration.md  customization.md  installation.md  logs.md  troubleshooting.md
docs/bot/: commands.md  notifications.md  permissions.md
docs/docker/: maintenance.md  services.md
docs/web/: dashboard.md
templates/: docker-compose.template.yml  env.template
web/: .dockerignore  Dockerfile  package.json
