# =============================================================================
# Bot Discord Minecraft - Configuration Projet Python
# =============================================================================

[build-system]
requires = ["setuptools>=69.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "minecraft-discord-bot"
version = "1.0.0"
description = "Bot Discord pour la gestion de serveurs Minecraft avec interface web"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [
    { name = "Glenn", email = "glenn@example.com" }
]
keywords = [
    "discord",
    "bot",
    "minecraft",
    "server-management",
    "docker"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: AsyncIO",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
    "Topic :: Internet",
    "Topic :: System :: Systems Administration",
    "Typing :: Typed"
]

[project.urls]
Homepage = "https://github.com/glenn/minecraft-discord-bot"
Documentation = "https://github.com/glenn/minecraft-discord-bot#readme"
Repository = "https://github.com/glenn/minecraft-discord-bot.git"
Issues = "https://github.com/glenn/minecraft-discord-bot/issues"

[project.scripts]
minecraft-bot = "src.main:main"
bot-cli = "src.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.23.2",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-xdist>=3.5.0",
    "black>=23.12.1",
    "isort>=5.13.2",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "ipython>=8.19.0",
    "debugpy>=1.8.0"
]
docs = [
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.5.3",
    "mkdocstrings[python]>=0.24.0"
]

# -----------------------------------------------------------------------------
# Tool Configurations
# -----------------------------------------------------------------------------

[tool.setuptools]
packages = ["src"]
package-dir = { "" = "." }

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.json", "*.toml"]

# -----------------------------------------------------------------------------
# Black - Code Formatter
# -----------------------------------------------------------------------------
[tool.black]
line-length = 100
target-version = ["py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | migrations
)/
'''

# -----------------------------------------------------------------------------
# isort - Import Sorting
# -----------------------------------------------------------------------------
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["**/migrations/*", "**/.venv/*"]
known_first_party = ["src"]
known_third_party = [
    "discord",
    "fastapi",
    "pydantic",
    "sqlalchemy",
    "asyncpg",
    "redis",
    "docker",
    "aiohttp"
]
sections = [
    "FUTURE",
    "STDLIB",
    "THIRDPARTY",
    "FIRSTPARTY",
    "LOCALFOLDER"
]

# -----------------------------------------------------------------------------
# MyPy - Type Checking
# -----------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
strict_equality = true
show_error_codes = true
show_column_numbers = true
pretty = true
plugins = [
    "pydantic.mypy",
    "sqlalchemy.ext.mypy.plugin"
]

[[tool.mypy.overrides]]
module = [
    "discord.*",
    "mcrcon.*",
    "mcstatus.*",
    "aiodocker.*",
    "apscheduler.*",
    "nbt.*"
]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

# -----------------------------------------------------------------------------
# Pytest - Testing
# -----------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
    "-p", "no:warnings",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html:coverage_html",
    "--cov-fail-under=80"
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "e2e: marks tests as end-to-end tests"
]

# -----------------------------------------------------------------------------
# Coverage - Code Coverage
# -----------------------------------------------------------------------------
[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/migrations/*",
    "*/.venv/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod"
]
fail_under = 80
show_missing = true
precision = 2

[tool.coverage.html]
directory = "coverage_html"

# -----------------------------------------------------------------------------
# Flake8 - Linting (via pyproject-flake8)
# -----------------------------------------------------------------------------
[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "E501", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    "migrations"
]
per-file-ignores = [
    "__init__.py:F401",
    "tests/*:S101"
]

# -----------------------------------------------------------------------------
# Ruff - Fast Python Linter (alternative to flake8)
# -----------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "migrations"
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate
    "PL",     # Pylint
    "PERF",   # Perflint
    "RUF"     # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by black)
    "B008",   # do not perform function calls in argument defaults
    "PLR0913" # too many arguments
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["S101", "ARG001"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

# -----------------------------------------------------------------------------
# Bandit - Security Linting
# -----------------------------------------------------------------------------
[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101", "B601"]

# -----------------------------------------------------------------------------
# Pyright - Type Checking (alternative to mypy)
# -----------------------------------------------------------------------------
[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
include = ["src"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "**/migrations",
    "**/.venv"
]
reportMissingImports = true
reportMissingTypeStubs = false
